--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,9 @@
           <a class="nav-link" href="{{ "/category/1" | relative_url }}">스타트업/비즈니스</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ "/category/2" | relative_url }}">서비스기획/PM</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ "/category/2" | relative_url }}">그로스해킹</a>
         </li>
         <li class="nav-item">
