네이버 서치어드바이저 작업

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
-
+  <!-- naver search advisor web master tool_html tag -->
+<meta name="naver-site-verification" content="6e17dc3577333d8a5a6ce49661f54787c7904a45" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
