--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,15 @@
 <head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-183490208-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-183490208-1');
+  </script>
+
   <!-- naver search advisor web master tool_html tag -->
 <meta name="naver-site-verification" content="6e17dc3577333d8a5a6ce49661f54787c7904a45" />
 <!-- google search console html tag input way -->
