G4 새로운 온페이지 코드로 입력

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-
+<!-- GA3 -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-183490208-1"></script>
   <script>
@@ -8,6 +8,16 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-183490208-1');
+  </script>
+<!-- GA4 -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3GH1JLJ4S1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3GH1JLJ4S1');
   </script>
 
   <!-- naver search advisor web master tool_html tag -->
