GA3,4 태그 삭제하고, 대신 GTM태그에 연결함

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,28 +7,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MZWFRNB');</script>
 <!-- End Google Tag Manager -->
 
-<!-- GA3 -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-183490208-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-183490208-1');
-</script>
+<!-- GA3와 GA4 태그가 머물던 자리...GTM으로 대신 설치할거임!!-->
 
-
-<!-- GA4 -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GH1JLJ4S1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-3GH1JLJ4S1');
-</script>
 
 <!-- naver search advisor web master tool_html tag -->
 <meta name="naver-site-verification" content="6e17dc3577333d8a5a6ce49661f54787c7904a45" />
