layout / 데이터 레이어 _ <script>     dataLayer.push({       'event': 'ViewContent',       'title': '{{ page.title }}'     });   </script> 넣음

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,6 +50,12 @@ layout: default
       </div>
     </div>
   </article>
-
+  <!-- 데이터 레이어 -->
+  <script>
+      dataLayer.push({
+        'event': 'ViewContent',
+        'title': '{{ page.title }}'
+      });
+    </script>
 <!-- disqus -->
 {% include disqus.html %}
