현재 head와 post가 빨간 불 들어옴
메일침프 태그가 인식이 안되느 상태인데... 메일침프 태그 관련 문제가 아니라 어딘가 잘못되서 전체적으로 인식이 안되는 듯함. 현재 head와 post가 빨간 불 들어옴

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 
-<!-- GA3와 GA4 태그가 머물던 자리...GTM으로 대신 설치할거임!!-->
-
+ <script id="mcjs">
+  !function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}
+  (document,"script","https://chimpstatic.com/mcjs-connected/js/users/91699b46268d0848c983cddc7/b9625454febd459583c13a0b2.js");
+ </script>
 
 <!-- naver search advisor web master tool_html tag -->
 <meta name="naver-site-verification" content="6e17dc3577333d8a5a6ce49661f54787c7904a45" />
